[package]
name = "evaluroll"
version = "0.1.1"
edition = "2021"
authors = ["Peter D. Faria"]
description = "A dice expression parser and evaluator."
license = "MIT"
repository = "https://github.com/zshift/evaluroll/"
readme = "README.md"
keywords = ["dice", "roll20", "parser"]
categories = ["game-development", "simulation", "text-processing"]

[dependencies]
peg = "0.8"
rand = "0.8"

[dev-dependencies]
once_cell = "1.18"
rayon = "1.8"
rand_hc = "0.3"
rusty-hook = "0.11.2"

[features]
trace = ["peg/trace"]